# ray_tracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: constants.h  file_representation.h  point.h  tree.h  triangle.h
src/: CMakeLists.txt  color.rs  file_io.rs  file_representation.cpp  image.rs  lib.rs  main.cpp  main.rs  point.cpp  scene.rs  tree.cpp  tree.rs  triangle.cpp  vec3.rs
wsl_build/: CMakeCache.txt  Makefile  cmake_install.cmake
wsl_build/.cmake/api/v1/reply/: cache-v2-13fe2acf9ad997a467e4.json  codemodel-v2-42f800efa44988e18adc.json  index-2021-04-10T15-37-01-0051.json  target-project-57542e699de1ac759d6f.json
wsl_build/src/: cmake_install.cmake
