cmake_minimum_required(VERSION 3.18)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(project)

include_directories(${PROJECT_SOURCE_DIR}/include)

file(MAKE_DIRECTORY bin)

add_subdirectory(src)

target_link_libraries(${PROJECT_NAME} PUBLIC pthread)